--- a/progress_steps/index.html
+++ b/progress_steps/index.html
@@ -9,22 +9,11 @@
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="script.js" defer></script>
-  <title>Progress Steps</title>
+  <title>My Project</title>
 </head>
 
 <body>
-  <div class="container">
-    <div class="progress-container">
-      <div class="progress" id="progress"></div>
-      <div class="circle active">1</div>
-      <div class="circle">2</div>
-      <div class="circle">3</div>
-      <div class="circle">4</div>
-    </div>
-
-    <button class="btn" id="prev" disabled>Prev</button>
-    <button class="btn" id="next">Next</button>
-  </div>
+  <h1>Project Starter</h1>
 </body>
 
 </html>
